# pyetrade

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  market.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  stale.yml
.spyproject/: workspace.ini
docs/: Makefile  OAUTH_QUIRKS.md  conf.py  examples.rst  index.rst  make.bat  pyetrade.rst
pyetrade/: __init__.py  accounts.py  alerts.py  authorization.py  automatedTrading.py  etrade.py  etrade_exception.py  market.py  order.py
tests/: __init__.py  option_chains_example.xml  option_expiry_dates_example.xml  option_lookup_example.xml  option_quote_example.xml  test_accounts.py  test_alerts.py  test_authorization.py  test_market.py  test_order.py
